--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,11 @@ builder = "NIXPACKS"
 buildCommand = "npm run build"
 
 [deploy]
-startCommand = "npm start"
+startCommand = "PORT=$PORT npm start"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
+
+[env]
+PORT = "8080"
+NODE_ENV = "production"
