--- a/railway.toml
+++ b/railway.toml
@@ -3,11 +3,5 @@ builder = "NIXPACKS"
 buildCommand = "npm run build"
 
 [deploy]
-startCommand = "PORT=$PORT npm start"
-healthcheckPath = "/"
-healthcheckTimeout = 100
+startCommand = "npm start"
 restartPolicyType = "ON_FAILURE"
-
-[env]
-PORT = "8080"
-NODE_ENV = "production"
