--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p ${PORT:-3000}",
+    "start": "node server.js",
     "lint": "next lint",
     "dev:debug": "cross-env NODE_OPTIONS='--inspect' next dev"
   },
