--- a/railway.toml
+++ b/railway.toml
@@ -3,5 +3,8 @@ builder = "NIXPACKS"
 buildCommand = "npm run build"
 
 [deploy]
-startCommand = "npm start"
+startCommand = "node server.js"
 restartPolicyType = "ON_FAILURE"
+
+[env]
+NODE_ENV = "production"
