--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "node server.js",
-    "lint": "next lint",
-    "dev:debug": "cross-env NODE_OPTIONS='--inspect' next dev"
+    "start": "NODE_ENV=production node server.js",
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/crypto-js": "^4.2.2",
