--- a/railway.toml
+++ b/railway.toml
@@ -3,8 +3,9 @@ builder = "NIXPACKS"
 buildCommand = "npm run build"
 
 [deploy]
-startCommand = "node server.js"
+startCommand = "npm run start"
 restartPolicyType = "ON_FAILURE"
 
 [env]
 NODE_ENV = "production"
+PORT = "8080"
