--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,9 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm run build"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "next start -p $PORT"
 restartPolicyType = "ON_FAILURE"
 
 [env]
 NODE_ENV = "production"
-PORT = "8080"
