--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production next start -p $PORT",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
